# rust-music-keyboard-renewed

./: .gitignore  Cargo.toml  InnoSetupScript.iss  README.md  RELEASE_NOTES_v0.4.1.md
config/: settings.json
src/: chord.rs  gui.rs  main.rs  midi.rs  note.rs  settings.rs
