[package]
name = "rust-music-keyboard-renewed"
version = "0.4.1"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["tokio", "canvas"] }
image = "0.25.10"
rodio = "0.22.2"
midly = "0.5.3"
once_cell = "1.21.4"
strum_macros = "0.28.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"


[[bin]]
name = "RustMusicKeyboardRenewed"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1.22"

[profile.release]
opt-level = 2
lto = "thin"
